; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_coroutine.c_ngx_http_lua_coroutine_create_helper.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_lua_module/src/extr_ngx_http_lua_coroutine.c_ngx_http_lua_coroutine_create_helper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32, i32*, i32 }

@.str = private unnamed_addr constant [22 x i8] c"Lua function expected\00", align 1
@NGX_HTTP_LUA_CONTEXT_REWRITE = common dso_local global i32 0, align 4
@NGX_HTTP_LUA_CONTEXT_ACCESS = common dso_local global i32 0, align 4
@NGX_HTTP_LUA_CONTEXT_CONTENT = common dso_local global i32 0, align 4
@NGX_HTTP_LUA_CONTEXT_TIMER = common dso_local global i32 0, align 4
@NGX_HTTP_LUA_CONTEXT_SSL_CERT = common dso_local global i32 0, align 4
@NGX_HTTP_LUA_CONTEXT_SSL_SESS_FETCH = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"no memory\00", align 1
@LUA_NOREF = common dso_local global i32 0, align 4
@NGX_HTTP_LUA_CO_SUSPENDED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ngx_http_lua_coroutine_create_helper(i32* %0, i32* %1, i32* %2, %struct.TYPE_6__** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_6__**, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store %struct.TYPE_6__** %3, %struct.TYPE_6__*** %9, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = call i64 @lua_isfunction(i32* %14, i32 1)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %4
  %18 = load i32*, i32** %6, align 8
  %19 = call i32 @lua_iscfunction(i32* %18, i32 1)
  %20 = icmp ne i32 %19, 0
  %21 = xor i1 %20, true
  br label %22

22:                                               ; preds = %17, %4
  %23 = phi i1 [ false, %4 ], [ %21, %17 ]
  %24 = zext i1 %23 to i32
  %25 = call i32 @luaL_argcheck(i32* %13, i32 %24, i32 1, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %26 = load i32*, i32** %6, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = load i32, i32* @NGX_HTTP_LUA_CONTEXT_REWRITE, align 4
  %29 = load i32, i32* @NGX_HTTP_LUA_CONTEXT_ACCESS, align 4
  %30 = or i32 %28, %29
  %31 = load i32, i32* @NGX_HTTP_LUA_CONTEXT_CONTENT, align 4
  %32 = or i32 %30, %31
  %33 = load i32, i32* @NGX_HTTP_LUA_CONTEXT_TIMER, align 4
  %34 = or i32 %32, %33
  %35 = load i32, i32* @NGX_HTTP_LUA_CONTEXT_SSL_CERT, align 4
  %36 = or i32 %34, %35
  %37 = load i32, i32* @NGX_HTTP_LUA_CONTEXT_SSL_SESS_FETCH, align 4
  %38 = or i32 %36, %37
  %39 = call i32 @ngx_http_lua_check_context(i32* %26, i32* %27, i32 %38)
  %40 = load i32*, i32** %7, align 8
  %41 = load i32*, i32** %8, align 8
  %42 = call i32* @ngx_http_lua_get_lua_vm(i32* %40, i32* %41)
  store i32* %42, i32** %10, align 8
  %43 = load i32*, i32** %10, align 8
  %44 = call i32* @lua_newthread(i32* %43)
  store i32* %44, i32** %11, align 8
  %45 = load i32*, i32** %7, align 8
  %46 = load i32*, i32** %6, align 8
  %47 = load i32*, i32** %11, align 8
  %48 = call i32 @ngx_http_lua_probe_user_coroutine_create(i32* %45, i32* %46, i32* %47)
  %49 = load i32*, i32** %11, align 8
  %50 = load i32*, i32** %8, align 8
  %51 = call %struct.TYPE_6__* @ngx_http_lua_get_co_ctx(i32* %49, i32* %50)
  store %struct.TYPE_6__* %51, %struct.TYPE_6__** %12, align 8
  %52 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %53 = icmp eq %struct.TYPE_6__* %52, null
  br i1 %53, label %54, label %64

54:                                               ; preds = %22
  %55 = load i32*, i32** %7, align 8
  %56 = load i32*, i32** %8, align 8
  %57 = call %struct.TYPE_6__* @ngx_http_lua_create_co_ctx(i32* %55, i32* %56)
  store %struct.TYPE_6__* %57, %struct.TYPE_6__** %12, align 8
  %58 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %59 = icmp eq %struct.TYPE_6__* %58, null
  br i1 %59, label %60, label %63

60:                                               ; preds = %54
  %61 = load i32*, i32** %6, align 8
  %62 = call i32 @luaL_error(i32* %61, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  store i32 %62, i32* %5, align 4
  br label %98

63:                                               ; preds = %54
  br label %70

64:                                               ; preds = %22
  %65 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %66 = call i32 @ngx_memzero(%struct.TYPE_6__* %65, i32 24)
  %67 = load i32, i32* @LUA_NOREF, align 4
  %68 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %69 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %68, i32 0, i32 3
  store i32 %67, i32* %69, align 8
  br label %70

70:                                               ; preds = %64, %63
  %71 = load i32*, i32** %11, align 8
  %72 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %73 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %72, i32 0, i32 2
  store i32* %71, i32** %73, align 8
  %74 = load i32, i32* @NGX_HTTP_LUA_CO_SUSPENDED, align 4
  %75 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %76 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %75, i32 0, i32 1
  store i32 %74, i32* %76, align 4
  %77 = load i32*, i32** %6, align 8
  %78 = call i32 @ngx_http_lua_get_globals_table(i32* %77)
  %79 = load i32*, i32** %6, align 8
  %80 = load i32*, i32** %11, align 8
  %81 = call i32 @lua_xmove(i32* %79, i32* %80, i32 1)
  %82 = load i32*, i32** %11, align 8
  %83 = call i32 @ngx_http_lua_set_globals_table(i32* %82)
  %84 = load i32*, i32** %10, align 8
  %85 = load i32*, i32** %6, align 8
  %86 = call i32 @lua_xmove(i32* %84, i32* %85, i32 1)
  %87 = load i32*, i32** %6, align 8
  %88 = call i32 @lua_pushvalue(i32* %87, i32 1)
  %89 = load i32*, i32** %6, align 8
  %90 = load i32*, i32** %11, align 8
  %91 = call i32 @lua_xmove(i32* %89, i32* %90, i32 1)
  %92 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %9, align 8
  %93 = icmp ne %struct.TYPE_6__** %92, null
  br i1 %93, label %94, label %97

94:                                               ; preds = %70
  %95 = load %struct.TYPE_6__*, %struct.TYPE_6__** %12, align 8
  %96 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %9, align 8
  store %struct.TYPE_6__* %95, %struct.TYPE_6__** %96, align 8
  br label %97

97:                                               ; preds = %94, %70
  store i32 1, i32* %5, align 4
  br label %98

98:                                               ; preds = %97, %60
  %99 = load i32, i32* %5, align 4
  ret i32 %99
}

declare dso_local i32 @luaL_argcheck(i32*, i32, i32, i8*) #1

declare dso_local i64 @lua_isfunction(i32*, i32) #1

declare dso_local i32 @lua_iscfunction(i32*, i32) #1

declare dso_local i32 @ngx_http_lua_check_context(i32*, i32*, i32) #1

declare dso_local i32* @ngx_http_lua_get_lua_vm(i32*, i32*) #1

declare dso_local i32* @lua_newthread(i32*) #1

declare dso_local i32 @ngx_http_lua_probe_user_coroutine_create(i32*, i32*, i32*) #1

declare dso_local %struct.TYPE_6__* @ngx_http_lua_get_co_ctx(i32*, i32*) #1

declare dso_local %struct.TYPE_6__* @ngx_http_lua_create_co_ctx(i32*, i32*) #1

declare dso_local i32 @luaL_error(i32*, i8*) #1

declare dso_local i32 @ngx_memzero(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @ngx_http_lua_get_globals_table(i32*) #1

declare dso_local i32 @lua_xmove(i32*, i32*, i32) #1

declare dso_local i32 @ngx_http_lua_set_globals_table(i32*) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
